--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,101 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  padding: 0;
+  box-sizing: border-box;
+  }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  body{
+    font-family: 'montseratt', sans-serif;
+  }
+
+  .app{
+    background-image: url('./assets/weatherappillustration.jpg');
+    background-size: center;
+    background-position: bottom;
+    transition: 0.4 ease-out;
+  }
+
+  .app.warm{
+    background-image: url('./assets/sunnyweather.jpg');
+  }
+
+
+  main{
+    min-height: 100vh;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2) );
+    padding: 25px;
+  }
+
+
+  .search-box{
+    width: 100%;
+    margin: 0 0 75px;
+    }
+
+    .search-box .search-bar {
+      display: block;
+      width: 100%;
+      padding: 35px;
+
+
+      appearance: none;
+      background: none;
+      border: none;
+      outline: none;
+
+      background-color: rgba(255, 255, 255, 0.5);
+      border-radius: 0px 0px 16px 16px;
+      margin-top: -25px;
+
+      box-shadow: 0px 5px rgba(0,0,0,0.2);
+
+      color: black;
+      font-size: 20px;
+
+      transition: 0.4s ease;
+      
+    }
+
+    .search-box  .search-bar: focus{
+      background-color: rgba(255,255,255,0.75);
+    }
+
+    .location-box .location {
+      color: blue;
+      font-size: 50px;
+      font-weight: 350;
+      font-style: normal;
+      text-align: center;
+      }
+
+      .location-box .date{
+        color: blue;
+        font-size: 35px;
+      font-weight: 200;
+      font-style: italic;
+      text-align: center;
+      }
+
+      .weather-box{
+        text-align: center;
+      }
+
+      .weather-box .temp{
+        
+        position: relative;
+        display: inline-block;
+        margin: 30px auto;
+        border-radius: 15px;
+
+        color: rgb(20, 19, 20);
+        font-size: 40px;
+        font-weight: 300;
+      }
+
+      .weather-box .weather{
+
+        color: rgb(17, 16, 17);
+        font-size: 50px;
+        font-weight: 300;
+      }
+         
